apps/development/blue-app/fe-blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-app
  labels:
    app: blue-app
  namespace: blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: blue-app
  # strategy:
  #   rollingUpdate:
  #     maxSurge: 25%
  #     maxUnavailable: 25%
  #   type: RollingUpdate
  template:
    metadata:
      labels:
        app: blue-app
    spec:
      containers:
      - image: 450360193046.dkr.ecr.us-west-2.amazonaws.com/santosoc-blue:stable
        imagePullPolicy: IfNotPresent
        name: blue-app
        ports:
          - name: http
            containerPort: 5001
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        resources:
          limits:
            cpu: "100m"
            memory: "128Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
      # nodeSelector:
        # eks.amazonaws.com/nodegroup: linux2
      # affinity: {}
